@@ -246,24 +246,25 @@ SDL version options
                       TV system),
                       full: full overscan - 275 pixels,
                       or provide a number between 100 and 275.
--horiz-offset <n>     Set horizontal offset of the visible area (-384..384)
--vert-offset <n>      Set vertical offset of the visible area (-275..275)
--stretch none|integer|full|<number>
+-horiz-shift <n>      Set horizontal shift of the visible area (-384..384)
+-vert-shift <n>      Set vertical shift of the visible area (-275..275)
+-stretch none|integral|full|<number>
                       Set method for screen stretching:
                       none: no stretching at all,
-                      integer: fit to screen, stretch by integer multiplier
+                      integral: fit to screen, stretch by integral multiplier
                       full: fit to screen, unrestricted stretching
                       or provide a custom multiplier (e.g. 2, 3, 2.5, ...)
 -fit-screen width|height|both
                       Set method of fitting the display to screen/window.
--keep-aspect none|1to1|real
+-image-aspect none|square-pixels|real
                       How to correct screen aspect ratio when stretching:
                       none: no correction, screen stretching unrestricted,
-                      1to1: width and height stretched by the same multipler
+                      square-pixels: width and height stretched by the same
+                      multiplier
                       real: real TV's aspect ratio (depending on TV system)
 -host-aspect-ratio auto|<x>:<y>
                       Set host display's aspect ratio. Used to correctly
-                      compute aspect ratio when -keep-aspect is "real".
+                      compute aspect ratio when -image-aspect is "real".
                       Can be set to values such as 4:3, 16:9, 1.25:1, etc.
                       "auto" tries to autodetect the ratio.
 -80column             Display output of 80 column hardware. Usable only in
@@ -294,8 +295,8 @@ The following 7 items are for -ntscemu only:
 -scanlines <n>        Set visibility of scanlines (0-100)
 -scanlinesint         Enable scanlines interpolation
 -no-scanlinesint      Disable scanlines interpolation
--opengl               Enable OpenGL hardware acceleration
--no-opengl            Disable OpenGL hardware acceleration
+-video-accel          Enable OpenGL hardware acceleration
+-no-video-accel       Disable OpenGL hardware acceleration
 -pixel-format bgr16|rgb16|bgra32|argb32
                       Choose OpenGL texture format
 -pbo                  With OpenGL, use Pixel Buffer Objects for performance
